--- a/OKHttps/OkhttpTest/app/src/main/AndroidManifest.xml
+++ b/OKHttps/OkhttpTest/app/src/main/AndroidManifest.xml
@@ -2,28 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.okhttptest">
-
     <!-- 开启网络访问权限 -->
-    <uses-permission android:name="android.permission.INTERNET">
-    </uses-permission>
-
-    <!-- 允许访问网络状态的权限 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <!-- 允许访问wifi状态的权限 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-
-    <!-- 允许修改网络状态的权限 -->
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE">
-    </uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission> <!-- 允许访问网络状态的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 允许访问wifi状态的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 允许修改网络状态的权限 -->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-
-    <!-- 允许修改wifi状态的权限 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 允许修改wifi状态的权限 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -35,13 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OkhttpTest"
         tools:targetApi="31">
-
-        <activity android:name=".OKHttpActivity"
+        <activity
+            android:name=".OKHttpDownloadActivity"
             android:exported="false" />
-
-        <activity android:name=".OKHttpListActivity"
+        <activity
+            android:name=".OKHttpActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".OKHttpListActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
